--- a/projects.html
+++ b/projects.html
@@ -7,9 +7,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Sofbox - Responsive Software Landing Page</title>
+    <title>BarleyField Limited</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="images/favicon.ico" />
+    <link rel="shortcut icon" href="images/barley-logo.png" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- REVOLUTION STYLE SHEETS -->
