--- a/about-us.html
+++ b/about-us.html
@@ -88,7 +88,7 @@
                     <a class="nav-link" href="careers.html">Careers</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact-us.html">Contact US</a>
+                    <a class="nav-link" href="contact-us.html">Contact Us</a>
                   </li>
                 </ul>
               </div>
@@ -507,7 +507,7 @@
               </div>
               <div class="iq-copyright mt-5 text-white">
                 Copyright @ <span id="currentYear"></span>
-                <a href="#" class="text-white">Sofbox</a>
+                <a href="#" class="text-white">Barleyfield Limited.</a>
               </div>
             </div>
           </div>
