--- a/careers.html
+++ b/careers.html
@@ -304,7 +304,7 @@
               </div>
               <div class="iq-copyright mt-5 text-white">
                 Copyright @ <span id="currentYear"></span>
-                <a href="#" class="text-white">Sofbox</a>
+                <a href="#" class="text-white">Barleyfield Limited.</a>
               </div>
             </div>
           </div>
