--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <a class="nav-link" href="careers.html">Careers</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact-us.html">Contact US</a>
+                    <a class="nav-link" href="contact-us.html">Contact Us</a>
                   </li>
                 </ul>
               </div>
