--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     />
     <title>BarleyField Limited</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="images/barley-logo.png" />
+    <link
+      rel="shortcut icon"
+      href="images/barleyfield-assets/barley-logo-removebg-preview.png"
+    />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- REVOLUTION STYLE SHEETS -->
@@ -175,16 +178,17 @@
               data-frame_1="st:620;sp:1200;sR:620;"
               data-frame_1_mask="u:t;"
               data-frame_999="o:0;st:w;sR:7180;"
-              style="z-index: 11; font-family: Poppins"
-              >At BarleyField Limited, we epitomize "High Quality Workmanship".
-              With meticulous<br />
-              attention to detail, our skilled artisans merge traditional
-              techniques with<br />
-              modern innovation. From planning to completion, we prioritize
-              precision,<br />
-              durability, and aesthetics. Our commitment ensures structures that
-              inspire and endure,
-              <br />exceeding expectations every time.
+              style="z-index: 11; font-family: Now; font-size: 14px !important"
+              >At BarleyField Limited, we epitomize "High Quality
+              Workmanship".<br />
+              With meticulous attention to detail, our skilled artisans
+              <br />merge traditional techniques with modern innovation. From
+              planning<br />
+              to completion, we prioritize precision, durability, and
+              aesthetics. Our <br />
+              commitment ensures structures that inspire and endure, exceeding
+              <br />
+              expectations everytime.
             </rs-layer>
           </rs-slide>
           <rs-slide
@@ -248,16 +252,17 @@
               data-frame_1="st:620;sp:1200;sR:620;"
               data-frame_1_mask="u:t;"
               data-frame_999="o:0;st:w;sR:7180;"
-              style="z-index: 11; font-family: Poppins"
-              >Barleyfield is guided by the imperatives of customer satisfaction
-              vis-à-vis return sales <br />
-              and business. To this extent, we are committed to quality<br />
-              and integrity in all facets of our business operations and this
-              also applies to our employees
+              style="z-index: 11; font-family: Now"
+              >Barleyfield is guided by the imperatives of customer
+              satisfaction<br />
+              vis-à-vis return sales and business. To this extent, we are
+              committed <br />
+              to quality and integrity in all facets of our business operations.
             </rs-layer>
             <rs-layer
               id="slider-3-slide-7-layer-3"
-              class="rev-btn"
+              class="rev-btn color-change"
+              style="font-family: Now"
               data-type="button"
               data-rsp_ch="on"
               data-xy="x:l,l,c,c;xo:48px,40px,0,-7px;yo:482px,411px,215px,203px;"
@@ -271,15 +276,6 @@
               data-frame_1_mask="u:t;"
               data-frame_999="o:0;st:w;sR:6770;"
               data-frame_hover="bgc:#007aff;bor:3px,3px,3px,3px;sp:100;bri:120%;"
-              style="
-                z-index: 12;
-                background: linear-gradient(
-                  90deg,
-                  rgba(63, 249, 153, 0.183) 0%,
-                  rgba(105, 253, 181, 0.504) 100%
-                );
-                font-family: Poppins;
-              "
               >Read More
             </rs-layer>
           </rs-slide>
@@ -297,8 +293,8 @@
       <section class="popup-images align-left pb-0" id="iq-feature">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6">
-              <div class="popup-images align-left">
+            <div class="col-lg-6" style="position: relative">
+              <div class="img-cont">
                 <div
                   class="img-one wow zoomIn"
                   data-wow-duration="0.6s"
@@ -306,49 +302,47 @@
                     visibility: visible;
                     animation-duration: 0.6s;
                     animation-name: zoomIn;
+
+                    box-shadow: 0 1.5rem 4rem rgba(#000, 0.4);
                   "
                 >
-                  <img src="images/home-1/04.png" alt="image1" />
+                  <img
+                    src="images/barleyfield-assets/about-2.jpg"
+                    alt="image1"
+                    class="photo-1"
+                  />
                 </div>
-                <div class="d-block">
-                  <div
-                    class="position-absolute img-two wow zoomIn"
-                    data-wow-delay="0.4s"
-                    data-wow-duration="0.8s"
-                    style="
-                      visibility: visible;
-                      animation-duration: 0.8s;
-                      animation-delay: 0.4s;
-                      animation-name: zoomIn;
-                    "
-                  >
-                    <img src="images/home-1/05.png" alt="image2" />
+                <div class="">
+                  <div class="">
+                    <img
+                      src="images/barleyfield-assets/team-1.jpg"
+                      alt="image2"
+                      class="photo-2"
+                    />
                   </div>
-                  <div
-                    class="position-absolute img-three wow zoomIn"
-                    data-wow-delay="0.8s"
-                    data-wow-duration="1s"
-                    style="
-                      visibility: visible;
-                      animation-duration: 1s;
-                      animation-delay: 0.8s;
-                      animation-name: zoomIn;
-                    "
-                  >
-                    <img src="images/home-1/06.png" alt="image3" />
+                  <div class="">
+                    <!-- <img src="images/home-1/06.png" alt="image3" /> -->
+                    <img
+                      src="images/barleyfield-assets/quality-2.jpg"
+                      alt="image1"
+                      class="photo-3"
+                    />
                   </div>
                 </div>
               </div>
               <div class="layer_wrap iq-objects style-two left-top">
                 <span class="iq-objects-02">
-                  <img src="images/home-1/07.png" alt="drive02" /> </span
+                  <!-- <img src="images/home-1/07.png" alt="drive02" />  --> </span
                 ><span class="iq-objects-03">
-                  <img src="images/home-1/08.png" alt="drive02" />
+                  <!-- <img src="images/home-1/08.png" alt="drive02" /> -->
                 </span>
               </div>
             </div>
             <div class="col-lg-6">
-              <div class="title-box text-left">
+              <div
+                class="title-box text-left"
+                style="font-family: Now; color: #555"
+              >
                 <h2>Welcome to BarleyField Ltd.</h2>
                 <p>
                   BarleyField Limited is a Civil/Structural Engineering
@@ -360,11 +354,11 @@
                 <p>
                   We undertake civil engineering works, sub-soil investigation,
                   piling, telecommunication infrastructure services and
-                  Electrical Engineering jobs for various organization/clients
+                  Electrical Engineering jobs for various organizations/clients.
                 </p>
                 <br />
                 <p>
-                  The company is managed by an experienced Civil engineer, who
+                  The company is managed by an experienced Civil Engineer, who
                   oversees a multi-disciplinary team of specialists for its
                   various jobs. In conjunction with an efficient management and
                   service support team, we offer reliable and quality services
@@ -379,7 +373,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
-              <div class="title-box">
+              <div class="title-box" style="font-family: Now">
                 <h2>Our Services</h2>
                 <p>
                   Barleyfield takes into cognizance customers’ peculiar needs,
@@ -525,8 +519,8 @@
               <a href="index.html">
                 <img
                   class="img-fluid mb-3"
-                  style="width: 11% !important"
-                  src="images/barley-logo.png"
+                  style="width: 20% !important"
+                  src="images/barleyfield-assets/barley-logo-removebg-preview.png"
                   alt="img"
                 />
                 <p style="color: white">BarleyField Limited</p>
