--- a/our-team.html
+++ b/our-team.html
@@ -9,7 +9,10 @@
     />
     <title>BarleyField Limited</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="images/barley-logo.png" />
+    <link
+      rel="shortcut icon"
+      href="images/barleyfield-assets/barley-logo-removebg-preview.png"
+    />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- REVOLUTION STYLE SHEETS -->
@@ -88,7 +91,7 @@
                     <a class="nav-link" href="careers.html">Careers</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact-us.html">Contact US</a>
+                    <a class="nav-link" href="contact-us.html">Contact Us</a>
                   </li>
                 </ul>
               </div>
@@ -429,8 +432,8 @@
               <a href="index.html">
                 <img
                   class="img-fluid mb-3"
-                  style="width: 11% !important"
-                  src="images/barley-logo.png"
+                  style="width: 20% !important"
+                  src="images/barleyfield-assets/barley-logo-removebg-preview.png"
                   alt="img"
                 />
                 <p style="color: white">BarleyField Limited</p>
