--- a/services.html
+++ b/services.html
@@ -9,7 +9,10 @@
     />
     <title>BarleyField Limited</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="images/barley-logo.png" />
+    <link
+      rel="shortcut icon"
+      href="images/barleyfield-assets/barley-logo-removebg-preview.png"
+    />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- REVOLUTION STYLE SHEETS -->
@@ -87,7 +90,7 @@
                     <a class="nav-link" href="careers.html">Careers</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact-us.html">Contact US</a>
+                    <a class="nav-link" href="contact-us.html">Contact Us</a>
                   </li>
                 </ul>
               </div>
@@ -122,63 +125,112 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
-              <div class="title-box text-center">
-                <h2>Our company's services for you.</h2>
-                <p>If you are planning on developing a product landing</p>
+              <div class="title-box">
+                <h2>Our Services</h2>
+                <p>
+                  Barleyfield takes into cognizance customers’ peculiar needs,
+                  environmental considerations and up to date technological
+                  possibilities.
+                </p>
               </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-4">
               <div
-                class="sox-services service-pattern wow fadeInUp text-left purple-hover"
+                class="box-effect no-effect wow fadeInUp text-center selected"
                 data-wow-delay="0.4s"
               >
-                <div class="sox-icon">
-                  <h5 class="text-hover">Competitive Salary</h5>
-                  <i
-                    aria-hidden="true"
-                    class="flaticon flaticon-investment"
-                  ></i>
+                <div class="icon-box">
+                  <div class="img-effect mb-4">
+                    <img src="images/home-9/90.png" alt="fancybox" />
+                  </div>
+                  <h5 class="mb-2">Civil Works</h5>
+                  <p class="mb-0">Building, Site Builds, Piling, Foundation.</p>
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-4">
               <div
-                class="sox-services service-pattern wow fadeInUp text-left org-hover"
-                data-wow-delay="0.4s"
+                class="box-effect no-effect wow fadeInUp text-center selected"
+                data-wow-delay="0.6s"
               >
-                <div class="sox-icon">
-                  <h5 class="text-hover">Stock Management</h5>
-                  <i
-                    aria-hidden="true"
-                    class="flaticon flaticon-accounting"
-                  ></i>
+                <div class="icon-box">
+                  <div class="img-effect mb-4">
+                    <img src="images/home-9/91.png" alt="fancybox" />
+                  </div>
+                  <h5 class="mb-2">Telecommunication</h5>
+                  <p class="mb-0">Tower Erection.</p>
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-4">
               <div
-                class="sox-services service-pattern wow fadeInUp text-left green-hover"
-                data-wow-delay="0.4s"
+                class="box-effect no-effect wow fadeInUp text-center feature-box-effect"
+                data-wow-delay="0.8s"
               >
-                <div class="sox-icon">
-                  <h5 class="text-hover">Receivable & Payables</h5>
-                  <i
-                    aria-hidden="true"
-                    class="flaticon flaticon-government"
-                  ></i>
+                <div class="icon-box">
+                  <div class="img-effect mb-4">
+                    <img src="images/home-9/92.png" alt="fancybox" />
+                  </div>
+                  <h5 class="mb-2">Solar</h5>
+                  <p class="mb-0">Supply and Installations</p>
                 </div>
               </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-4">
               <div
-                class="sox-services service-pattern wow fadeInUp text-left purple-hover"
+                class="box-effect no-effect wow fadeInUp text-center selected"
                 data-wow-delay="0.4s"
               >
-                <div class="sox-icon">
-                  <h5 class="text-hover">Manage Buying & Selling</h5>
-                  <i aria-hidden="true" class="flaticon flaticon-care"></i>
+                <div class="icon-box">
+                  <div class="img-effect mb-4">
+                    <img src="images/home-9/93.png" alt="fancybox" />
+                  </div>
+                  <h5 class="mb-2">Collocation</h5>
+                  <p class="mb-0">
+                    Site Upgrade, Antenna and Dish Installation
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div
+                class="box-effect no-effect wow fadeInUp text-center selected"
+                data-wow-delay="0.6s"
+              >
+                <div class="icon-box">
+                  <div class="img-effect mb-4">
+                    <img src="images/home-9/94.png" alt="fancybox" />
+                  </div>
+                  <h5 class="mb-2">Facility Management</h5>
+                  <!-- <p class="mb-0">It is a long established fact that a reader will be distracted</p> -->
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div
+                class="box-effect no-effect wow fadeInUp text-center selected"
+                data-wow-delay="0.8s"
+              >
+                <div class="icon-box">
+                  <div class="img-effect mb-4">
+                    <img src="images/home-9/95.png" alt="fancybox" />
+                  </div>
+                  <h5 class="mb-2">Project Management</h5>
+                  <!-- <p class="mb-0">It is a long established fact that a reader will be distracted</p> -->
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div
+                class="box-effect no-effect wow fadeInUp text-center selected"
+                data-wow-delay="0.8s"
+              >
+                <div class="icon-box">
+                  <div class="img-effect mb-4">
+                    <img src="images/home-9/95.png" alt="fancybox" />
+                  </div>
+                  <h5 class="mb-2">Supply and General Contractor</h5>
+                  <!-- <p class="mb-0">It is a long established fact that a reader will be distracted</p> -->
                 </div>
               </div>
             </div>
@@ -293,8 +345,8 @@
               <a href="index.html">
                 <img
                   class="img-fluid mb-3"
-                  style="width: 11% !important"
-                  src="images/barley-logo.png"
+                  style="width: 20% !important"
+                  src="images/barleyfield-assets/barley-logo-removebg-preview.png"
                   alt="img"
                 />
                 <p style="color: white">BarleyField Limited</p>
