--- a/careers.html
+++ b/careers.html
@@ -9,7 +9,10 @@
     />
     <title>BarleyField Limited</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="images/barley-logo.png" />
+    <link
+      rel="shortcut icon"
+      href="images/barleyfield-assets/barley-logo-removebg-preview.png"
+    />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- REVOLUTION STYLE SHEETS -->
@@ -293,8 +296,8 @@
               <a href="index.html">
                 <img
                   class="img-fluid mb-3"
-                  style="width: 11% !important"
-                  src="images/barley-logo.png"
+                  style="width: 20% !important"
+                  src="/images/barleyfield-assets/barley-logo-removebg-preview.png"
                   alt="img"
                 />
                 <p style="color: white">BarleyField Limited</p>
