--- a/about-us.html
+++ b/about-us.html
@@ -314,11 +314,7 @@
                 <li>
                   <div class="team-blog">
                     <div class="team-images">
-                      <img
-                        src="images/home-2/214.jpeg"
-                        class="img-fluid"
-                        alt="#0"
-                      />
+                      <img src="" class="img-fluid" alt="#0" />
                     </div>
                     <div class="team-description mb-3 text-center">
                       <h5 class="text-white">Sal Monella</h5>
@@ -342,11 +338,7 @@
                 <li>
                   <div class="team-blog">
                     <div class="team-images">
-                      <img
-                        src="images/home-2/215.jpeg"
-                        class="img-fluid"
-                        alt="#0"
-                      />
+                      <img src="" class="img-fluid" alt="#0" />
                     </div>
                     <div class="team-description mb-3 text-center">
                       <h5 class="text-white">Rick O'Shea</h5>
@@ -370,11 +362,7 @@
                 <li>
                   <div class="team-blog">
                     <div class="team-images">
-                      <img
-                        src="images/home-2/216.jpeg"
-                        class="img-fluid"
-                        alt="#0"
-                      />
+                      <img src="" class="img-fluid" alt="#0" />
                     </div>
                     <div class="team-description mb-3 text-center">
                       <h5 class="text-white">Brock Lee</h5>
@@ -398,11 +386,7 @@
                 <li>
                   <div class="team-blog">
                     <div class="team-images">
-                      <img
-                        src="images/home-2/217.jpeg"
-                        class="img-fluid"
-                        alt="#0"
-                      />
+                      <img src="" class="img-fluid" alt="#0" />
                     </div>
                     <div class="team-description mb-3 text-center">
                       <h5 class="text-white">Paige Turner</h5>
@@ -426,11 +410,7 @@
                 <li>
                   <div class="team-blog">
                     <div class="team-images">
-                      <img
-                        src="images/home-2/218.jpeg"
-                        class="img-fluid"
-                        alt="#0"
-                      />
+                      <img src="" class="img-fluid" alt="#0" />
                     </div>
                     <div class="team-description mb-3 text-center">
                       <h5 class="text-white">Gail Forcewind</h5>
@@ -454,11 +434,7 @@
                 <li>
                   <div class="team-blog">
                     <div class="team-images">
-                      <img
-                        src="images/home-2/219.jpeg"
-                        class="img-fluid"
-                        alt="#0"
-                      />
+                      <img src="" class="img-fluid" alt="#0" />
                     </div>
                     <div class="team-description mb-3 text-center">
                       <h5 class="text-white">Paul Molive</h5>
@@ -482,11 +458,7 @@
                 <li>
                   <div class="team-blog">
                     <div class="team-images">
-                      <img
-                        src="images/home-2/220.jpeg"
-                        class="img-fluid"
-                        alt="#0"
-                      />
+                      <img src="" class="img-fluid" alt="#0" />
                     </div>
                     <div class="team-description mb-3 text-center">
                       <h5 class="text-white">Anna Sthesia</h5>
