--- a/careers.html
+++ b/careers.html
@@ -108,7 +108,7 @@
               <h2 class="title-breadcrumb">Careers</h2>
               <ol class="breadcrumb main-bg">
                 <li class="breadcrumb-item">
-                  <a href="#"
+                  <a href="index.html"
                     ><i class="fa fa-home mr-1" aria-hidden="true"></i>Home</a
                   >
                 </li>
