--- a/our-team.html
+++ b/our-team.html
@@ -156,11 +156,7 @@
                   <li>
                     <div class="team-blog">
                       <div class="team-images">
-                        <img
-                          src="images/home-2/214.jpeg"
-                          class="img-fluid"
-                          alt="#0"
-                        />
+                        <img src="" class="img-fluid" alt="#0" />
                       </div>
                       <div class="team-description mb-3 text-center">
                         <h5 class="text-white">Sal Monella</h5>
@@ -184,11 +180,7 @@
                   <li>
                     <div class="team-blog">
                       <div class="team-images">
-                        <img
-                          src="images/home-2/215.jpeg"
-                          class="img-fluid"
-                          alt="#0"
-                        />
+                        <img src="" class="img-fluid" alt="#0" />
                       </div>
                       <div class="team-description mb-3 text-center">
                         <h5 class="text-white">Rick O'Shea</h5>
@@ -212,11 +204,7 @@
                   <li>
                     <div class="team-blog">
                       <div class="team-images">
-                        <img
-                          src="images/home-2/216.jpeg"
-                          class="img-fluid"
-                          alt="#0"
-                        />
+                        <img src="" class="img-fluid" alt="#0" />
                       </div>
                       <div class="team-description mb-3 text-center">
                         <h5 class="text-white">Brock Lee</h5>
@@ -240,11 +228,7 @@
                   <li>
                     <div class="team-blog">
                       <div class="team-images">
-                        <img
-                          src="images/home-2/217.jpeg"
-                          class="img-fluid"
-                          alt="#0"
-                        />
+                        <img src="" class="img-fluid" alt="#0" />
                       </div>
                       <div class="team-description mb-3 text-center">
                         <h5 class="text-white">Paige Turner</h5>
@@ -268,11 +252,7 @@
                   <li>
                     <div class="team-blog">
                       <div class="team-images">
-                        <img
-                          src="images/home-2/218.jpeg"
-                          class="img-fluid"
-                          alt="#0"
-                        />
+                        <img src="" class="img-fluid" alt="#0" />
                       </div>
                       <div class="team-description mb-3 text-center">
                         <h5 class="text-white">Gail Forcewind</h5>
@@ -296,11 +276,7 @@
                   <li>
                     <div class="team-blog">
                       <div class="team-images">
-                        <img
-                          src="images/home-2/219.jpeg"
-                          class="img-fluid"
-                          alt="#0"
-                        />
+                        <img src="" class="img-fluid" alt="#0" />
                       </div>
                       <div class="team-description mb-3 text-center">
                         <h5 class="text-white">Paul Molive</h5>
@@ -324,11 +300,7 @@
                   <li>
                     <div class="team-blog">
                       <div class="team-images">
-                        <img
-                          src="images/home-2/220.jpeg"
-                          class="img-fluid"
-                          alt="#0"
-                        />
+                        <img src="" class="img-fluid" alt="#0" />
                       </div>
                       <div class="team-description mb-3 text-center">
                         <h5 class="text-white">Anna Sthesia</h5>
