--- a/index.html
+++ b/index.html
@@ -302,14 +302,12 @@
                     visibility: visible;
                     animation-duration: 0.6s;
                     animation-name: zoomIn;
-
-                    box-shadow: 0 1.5rem 4rem rgba(#000, 0.4);
                   "
                 >
                   <img
                     src="images/barleyfield-assets/about-2.jpg"
                     alt="image1"
-                    class="photo-1"
+                    class="shadow-lg photo-1"
                   />
                 </div>
                 <div class="">
@@ -317,7 +315,7 @@
                     <img
                       src="images/barleyfield-assets/team-1.jpg"
                       alt="image2"
-                      class="photo-2"
+                      class="shadow photo-2"
                     />
                   </div>
                   <div class="">
@@ -325,7 +323,7 @@
                     <img
                       src="images/barleyfield-assets/quality-2.jpg"
                       alt="image1"
-                      class="photo-3"
+                      class="shadow-lg photo-3"
                     />
                   </div>
                 </div>
