--- a/services.html
+++ b/services.html
@@ -237,80 +237,7 @@
           </div>
         </div>
       </section>
-      <section class="pt-0">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="title-box text-center">
-                <h2>Open Positions</h2>
-                <p>If you are planning on developing a product landing</p>
-              </div>
-              <div class="iq-accordion career-style">
-                <div class="iq-accordion-block accordion-active">
-                  <div class="active-faq clearfix" style="">
-                    <div class="container">
-                      <div class="row align-items-center">
-                        <div class="col-md-9 col-sm-12">
-                          <a href="contact-us.html" class="accordion-title"
-                            ><span>UI/UX designer</span></a
-                          >
-                        </div>
-                        <div
-                          class="col-md-3 col-sm-12 text-center text-lg-right text-md-right"
-                        >
-                          <a class="button-gradient" href="contact-us.html"
-                            >Read more</a
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="iq-accordion-block">
-                  <div class="active-faq clearfix">
-                    <div class="container">
-                      <div class="row align-items-center">
-                        <div class="col-md-9 col-sm-12">
-                          <a href="contact-us.html" class="accordion-title"
-                            ><span>Graphic Designer</span></a
-                          >
-                        </div>
-                        <div
-                          class="col-md-3 col-sm-12 text-center text-lg-right text-md-right"
-                        >
-                          <a class="button-gradient" href="contact-us.html"
-                            >Read more</a
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="iq-accordion-block">
-                  <div class="active-faq clearfix">
-                    <div class="container">
-                      <div class="row align-items-center">
-                        <div class="col-md-9 col-sm-12">
-                          <a href="contact-us.html" class="accordion-title"
-                            ><span>Web Developer</span></a
-                          >
-                        </div>
-                        <div
-                          class="col-md-3 col-sm-12 text-center text-lg-right text-md-right"
-                        >
-                          <a class="button-gradient" href="contact-us.html"
-                            >Read more</a
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+      <section class="pt-0"></section>
     </div>
     <!-- Main Content END -->
     <!-- Footer Start -->
