--- a/careers.html
+++ b/careers.html
@@ -126,63 +126,8 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="title-box text-center">
-                <h2>Our company's services for you.</h2>
-                <p>If you are planning on developing a product landing</p>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-3 col-md-6">
-              <div
-                class="sox-services service-pattern wow fadeInUp text-left purple-hover"
-                data-wow-delay="0.4s"
-              >
-                <div class="sox-icon">
-                  <h5 class="text-hover">Competitive Salary</h5>
-                  <i
-                    aria-hidden="true"
-                    class="flaticon flaticon-investment"
-                  ></i>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-              <div
-                class="sox-services service-pattern wow fadeInUp text-left org-hover"
-                data-wow-delay="0.4s"
-              >
-                <div class="sox-icon">
-                  <h5 class="text-hover">Stock Management</h5>
-                  <i
-                    aria-hidden="true"
-                    class="flaticon flaticon-accounting"
-                  ></i>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-              <div
-                class="sox-services service-pattern wow fadeInUp text-left green-hover"
-                data-wow-delay="0.4s"
-              >
-                <div class="sox-icon">
-                  <h5 class="text-hover">Receivable & Payables</h5>
-                  <i
-                    aria-hidden="true"
-                    class="flaticon flaticon-government"
-                  ></i>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-              <div
-                class="sox-services service-pattern wow fadeInUp text-left purple-hover"
-                data-wow-delay="0.4s"
-              >
-                <div class="sox-icon">
-                  <h5 class="text-hover">Manage Buying & Selling</h5>
-                  <i aria-hidden="true" class="flaticon flaticon-care"></i>
-                </div>
+                <h2>Careers We Provide</h2>
+                <p>Stay Tuned</p>
               </div>
             </div>
           </div>
@@ -197,46 +142,6 @@
                 <p>If you are planning on developing a product landing</p>
               </div>
               <div class="iq-accordion career-style">
-                <div class="iq-accordion-block accordion-active">
-                  <div class="active-faq clearfix" style="">
-                    <div class="container">
-                      <div class="row align-items-center">
-                        <div class="col-md-9 col-sm-12">
-                          <a href="contact-us.html" class="accordion-title"
-                            ><span>UI/UX designer</span></a
-                          >
-                        </div>
-                        <div
-                          class="col-md-3 col-sm-12 text-center text-lg-right text-md-right"
-                        >
-                          <a class="button-gradient" href="contact-us.html"
-                            >Read more</a
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="iq-accordion-block">
-                  <div class="active-faq clearfix">
-                    <div class="container">
-                      <div class="row align-items-center">
-                        <div class="col-md-9 col-sm-12">
-                          <a href="contact-us.html" class="accordion-title"
-                            ><span>Graphic Designer</span></a
-                          >
-                        </div>
-                        <div
-                          class="col-md-3 col-sm-12 text-center text-lg-right text-md-right"
-                        >
-                          <a class="button-gradient" href="contact-us.html"
-                            >Read more</a
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
                 <div class="iq-accordion-block">
                   <div class="active-faq clearfix">
                     <div class="container">
